@@ -204,6 +204,8 @@
 	- preserve rpmdb file attributes across --rebuilddb (#70367).
 	- fix: identify athlon with 3DNOWEXT as "athlon", not "i786" (#70539).
 	- fix: repair --root with --verify (#70527).
+	- fix: signed pubkeys were imported incorrectly (#68291).
+	- include tgpg script to verify signatures using only gpg.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
